[project]
name = "autonomous-delta-neutral-arbitrageur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.43",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
