[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-delta-neutral-arbitrageur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.5.43",
    "cryptography>=46.0.6",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.3.4",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.1",
    "pyasn1>=0.6.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
]

[project.scripts]
adna = "src.main:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
lint.select = ["E", "F"]
fix = true

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
